
add_executable(test_sysinfo test_sysinfo.cpp)
target_link_libraries(test_sysinfo libyovm)

add_executable(test_properties test_properties.cpp)
target_link_libraries(test_properties libyovm)

add_executable(test_method_type test_method_type.cpp)
target_link_libraries(test_method_type libyovm)

add_executable(test_descriptor test_descriptor.cpp)
target_link_libraries(test_descriptor libyovm)

add_executable(test_load_class class_loader/test_load_class.cpp)
target_link_libraries(test_load_class libyovm)

add_executable(test_class_loader class_loader/test_class_loader.cpp)
target_link_libraries(test_class_loader libyovm)

add_executable(test_clone_object test_clone_object.cpp)
target_link_libraries(test_clone_object libyovm)